src/clangtidy.txt
/home/sara/Desktop/facultyProjects/Grafika/ForestTrailGL/src/main.cpp:2:10: error: 'glad/include/glad/glad.h' file not found [clang-diagnostic-error]
#include "glad/include/glad/glad.h"
         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/sara/Desktop/facultyProjects/Grafika/ForestTrailGL/src/main.cpp:32:5: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
int main() {
~~~ ^
auto       -> int
/home/sara/Desktop/facultyProjects/Grafika/ForestTrailGL/src/main.cpp:38:70: warning: use nullptr [modernize-use-nullptr]
    GLFWwindow* window = glfwCreateWindow(800, 600, "ForestTrailGL", NULL, NULL);
                                                                     ^~~~
                                                                     nullptr
/home/sara/Desktop/facultyProjects/Grafika/ForestTrailGL/src/main.cpp:38:76: warning: use nullptr [modernize-use-nullptr]
    GLFWwindow* window = glfwCreateWindow(800, 600, "ForestTrailGL", NULL, NULL);
                                                                           ^~~~
                                                                           nullptr
/home/sara/Desktop/facultyProjects/Grafika/ForestTrailGL/src/main.cpp:39:18: warning: use nullptr [modernize-use-nullptr]
    if(window == NULL){
                 ^~~~
                 nullptr
/home/sara/Desktop/facultyProjects/Grafika/ForestTrailGL/src/main.cpp:164:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    float xpos = static_cast<float>(xposIn);
    ^~~~~
    auto
/home/sara/Desktop/facultyProjects/Grafika/ForestTrailGL/src/main.cpp:165:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    float ypos = static_cast<float>(yposIn);
    ^~~~~
    auto
